Better fix for layout problem in info panel. See #3.
Old fix didn't work well with roll down of manifest info
in manifest list.

--- a/src/main.scss
+++ b/src/main.scss
@@ -210,12 +210,12 @@ body {
 
   & > .fullWidth {
     align-self: stretch;
-    width: 100%;
+    width: unset;
   }
 
   & > .fullHeight {
     flex-grow: 1;
-    height: 100%;
+    height: unset;
   }
 }
 
